# Minutes-IQ

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  admin_check.py  check_admin.py  check_all_references.py  check_client_tables.py  environment.yml  fix_client_table_properly.py  fix_keywords_schema_complete.py  fix_keywords_table.py  keywords.txt  main.py  package.json  playwright.config.ts  pyproject.toml  pyproject_original.toml  pytest.ini  run_client_keyword_migration.py  schema_check.py
.github/workflows/: ci-cd.yml  e2e-tests.yml
docs/01_overview/: 01_overview.md  02_webapp_overview.md  03_fastapi_webapp_plan.md  04_fastapi_build_checklist.md  05_turso_and_auth_code_rationale.md  06_architecture_decision_record.md  07_high_level_roadmap.md  08_project_pause.md  09_server_errors.md
docs/02_architecture/: 01_project_structure.md  02_webapp_architecture.md  03_api_contract.md  03_sequence_diagrams.md  04_api_contract.md  05_client_keyword_data_model.md
docs/03_deployment/: 01_deployment_guide.md  02_configuration_reference.md  03_storage_and_hosting_strategy.md
docs/04_api/: 03_client_keyword_api.md
docs/04_security/: 01_security_model.md  02_auth_and_password_reset_design.md  03_auth_routes_pseudocode.md  04_admin_control_policy.md  04_authorization_codes_design.md  05_error_failure_catalog.md  06_security_model.md  07_admin_governance_policy.md  08_password_reset_policy.md  09_README_reset_admin_password.md
docs/05_future_roadmap/: 01_webapp_roadmap.md
docs/06_medium_blog/: web_scraping_blog.md
docs/06_operations/: 01_scraper_source_onboarding.md  02_operational_runbook.md  03_sequence_diagrams_login_and_scraper.md  04_user_registration_guide.md  05_client_keyword_management_guide.md
docs/06_scraper/: 01_api_reference.md  02_data_model.md  03_operational_guide.md  README.md
docs/07_testing/: 03_e2e_testing_summary.md
docs/08_database/: 00_turso_commands.md  01_database_schema.md  02-0_schema_v1_database_documentation.md  02-1_database_schema_documentation_v1_1.md  02-2_database_schema_documentation_v1_2.md  02-3_database_schema_plain_english.md  02-4_database_schema_plain_english_FINAL.md  04_indexes_and_fk_rules.md  05_README_database_setup.md  06_auth_and_user_repositories.md  07_database_migrations.md
docs/09_medium_blog/: outline.md
docs/10_instructions/: 01_frontend_architecture_instructions.md  01a_clarification_instructions.md  01b_clarification_instructions_2.md  02_scrape_job_manage_ui_clarify.md  03_resuts_downloads_instructions_clarify.md  04_admin_panel_implementation_notes.md  05_profile_implementation_notes.md  06_ux_enhancements_implementation_notes.md  07_e2e_testing_instructions.md  08_multi_url_client_architecture.md  09_client_url_refactor.md  10_phase2_website_url_audit_report.md  11_phase3_implementation_plan.md  12_authorization_code_generation_fix.md  12_generation_codes.md
docs/archive/: original_README.md
docs/blog/: blog_outline.md  web_scraping_blog.md
frontend/: build.sh  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
frontend/src/: input.css
migrations/: 20260125_120000_initial_schema.sql  20260125_140000_add_authorization_codes.sql  20260125_160000_add_password_reset_tokens.sql  20260125_170000_add_client_keyword_management.sql  20260212_120000_refactor_client_urls.sql
scripts/: README.md
scripts/archive/: create_missing_tables.py
scripts/migrations/: fix_scrape_results_schema.py  run_client_urls_migration.py  run_scraper_orchestration_migration.py
src/: JEA_minutes_scraper.py  highlight_mentions.py
src/NLP/: NLP_test.py
src/dashboard/: __init__.py  dashboard.py
src/jea_meeting_web_scraper/: JEA_minutes_scraper.py  __init__.py  highlight_mentions.py  jea_minutes_scraper.py  main.py
src/minutes_iq/: error_handlers.py  highlight_mentions.py  main.py  templates_config.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/e2e/: README.md
tests/functional_tests/: __init__.py
(+211 files in other folders)
