[project]
name = "jea-meeting-web-scraper"
version = "0.1.0"
description = "A backend-ready scraper and NLP pipeline for extracting signals from JEA and municipal agency meeting minutes."
requires-python = ">=3.12"

dependencies = [
    # Core utilities
    "numpy",
    "pandas",
    "requests",
    "beautifulsoup4",
    "lxml",
    "nltk",
    "tqdm",
    # spaCy + NLP dependencies
    "spacy",
    "catalogue",
    "cymem",
    "preshed",
    "thinc",
    # PDF handling
    "cryptography",
    "pdfminer-six",
    "pdfplumber",
    "pillow",
    "pypdfium2",
    "fastapi>=0.123.10",
    "httpx>=0.28.1",
    "pandas-stubs==2.3.3.251201",
    "streamlit>=1.52.1",
    "fitz>=0.0.1.dev2",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "black>=0.0.0",
    "ruff>=0.0.0",
    "pytest>=0.0.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
